# devx-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 001-tree-sitter-for-ast-analysis.md  002-llm-augmented-code-review.md  003-dora-metrics-implementation.md
examples/: generate_tests.py  review_pr.py
src/devx/: __init__.py
src/devx/core/: __init__.py  config.py  llm_client.py  models.py
src/devx/metrics/: __init__.py  analyzer.py  collector.py  dashboard.py
src/devx/review/: __init__.py  agent.py  analyzer.py  diff_parser.py  suggestions.py
src/devx/sdlc/: __init__.py  github_client.py  labeler.py  triage.py
src/devx/testgen/: __init__.py  extractor.py  generator.py  templates.py
tests/: conftest.py  test_api_contracts.py  test_e2e_customer_scenarios.py  test_metrics.py  test_models.py  test_non_functional.py  test_review.py  test_scaling.py  test_sdlc.py  test_testgen.py
